# eos-metrics-instrumentation

./: .editorconfig  .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  git.mk  meson.build  meson_options.txt
data/: 90-eos-crash-metrics.conf.in  Makefile.am  Makefile.am.inc  eos-metrics-instrumentation.conf.in  eos-metrics-instrumentation.path.in  eos-metrics-instrumentation.service  eos-metrics-instrumentation.service.in  meson.build
debian/: changelog  control  copyright  rules
src/: Makefile.am.inc  eins-boottime-source.h  eins-hwinfo.c  eins-hwinfo.h  eins-location-label.c  eins-location-label.h  eins-location.c  eins-location.h  eins-network-id.c  eins-network-id.h  eins-persistent-tally.c  eins-persistent-tally.h  eos-crash-metrics.c  eos-metrics-instrumentation.c  eos-metrics-instrumentation.h  meson.build
tests/: Makefile.am.inc  meson.build  test-hwinfo.c  test-location-label.c  test-location.c  test-location.py  test-persistent-tally.c
tests/test-hwinfo-data/: bad-missing-fields.json  bad-wrong-data-type.json  bad-wrong-structure-3.json  bad-wrong-structure-4.json  bad-wrong-structure-5.json  bad-wrong-structure-6.json  bad-wrong-structure-7.json  bad-wrong-structure-8.json  bad-wrong-structure-9.json  good-no-cpu-max-mhz.json  good-rockchip.json  good-rpi4b.json  good-xps13.json  test-hwinfo.gresource.xml
tools/: Makefile.am.inc  eos-label-location.in  eos-network-id.c  meson.build
